# apex-2026

./: .cursorrules  .env.example  AGENTS.md  APEX_QUANT_STRATEGY.md  AUDIT.md  COLLECTION_RUNBOOK.md  PHASE_AB_VALIDATION.md  README.md  directive_final.md  directive_final_REGISTRY.md  gen-key.ts  package.json  raodmap_final.md  roadmap.md  roadmapv2.md  roadmapv3.md
data/: apex-test.db-shm  apex-test.db-wal  apex.db  apex.db-shm  apex.db-wal  paper_trades.jsonl
docs/: ARCHITECTURE.md  EVENTS.md  QUICKSTART.md
python/: model_registry.py  requirements.txt  retrain_pipeline.py
python/rl/: __init__.py  cvar_loss.py  data_loader.py  networks.py  ppo_agent.py  replay_buffer.py  shadow_eval.py  trading_env.py  train_ppo.py
rust_core/: Cargo.toml  build.ps1
rust_core/src/: ffi.rs  lib.rs  types.rs  utils.rs
scripts/: bench-ffi.ts  discover-whales.ts  export-ml-dataset.ts  seed-whales.ts  telegram-auth.ts  test-curve-decode.ts  test-decision-core.ts  test-guard.ts  test-market-scanner.ts  test-sniper.ts  verify-xai.ts
scripts/lib/: whale-seed.ts
src/: README.md  app.ts
src/bridge/: RustBridge.ts  buffer-pool.ts  fallback.ts  types.ts
src/constants/: curve-entry-bands.ts  pumpfun.ts
src/data/: FeatureStore.ts  PriceTracker.ts  WhaleWalletDB.ts
src/detectors/: CurveTokenAnalyzer.ts  Guard.ts  README.md
src/engine/: AIBrain.ts  CurveShadowAgent.ts  DecisionCore.ts  HawkesEvaluator.ts  ModelUpdater.ts  OutcomeTracker.ts  RewardLogger.ts  ShadowAgent.ts
src/executor/: README.md  Sniper.ts
src/features/: FeatureAssembler.ts  OFICalculator.ts
(+48 files in other folders)
