[package]
name = "apex_core"
version = "0.1.0"
edition = "2021"
authors = ["APEX-2026"]
description = "Rust inference engine for APEX-2026 HFT bot"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ONNX Runtime — Phase 1.3
# ort = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
